#22, #11 - fixed the tab bar visibility issues and wishlist useEffect infnite loop

--- a/src/theme/variables.css
+++ b/src/theme/variables.css
@@ -348,6 +348,10 @@ position: absolute;;
 .hide {
   display:none;
 }
+
+.unhide{
+  visibility: inherit;
+}
 .postcode_input {
   outline-color: var(--ion-color-danger);
 }
